--- a/index.html
+++ b/index.html
@@ -87,50 +87,9 @@
                     <h3 class="section-subheading text-muted">A continuación se encuentran todas las compañías que colaboran con nosotros.</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 1-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="row text-center">
-                                   <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." /> 
-                                </div>
-                            </a>
-                            <div class="team-member">
-                                <h4>Action Live</h4>
-                                <p class="text-muted">Paintball en Madrid</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="row text-center">
-                                    <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
-                                </div>
-                            </a>
-                            <div class="team-member">
-                                <h4>Paintball Madrid</h4>
-                                <p class="text-muted">Paintball en Madrid</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 3-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <div class="row text-center">
-                                    <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
-                                </div>
-                            </a>
-                            <div class="team-member">
-                                <h4>Evasion Paintball</h4>
-                                <p class="text-muted">Paintball en Madrid</p>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <!-- Portfolio item 4-->
+                        <!-- Portfolio item -->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
                                 <div class="row text-center">
@@ -144,7 +103,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <!-- Portfolio item 5-->
+                        <!-- Portfolio item -->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
                                 <div class="row text-center">
@@ -158,7 +117,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <!-- Portfolio item 6-->
+                        <!-- Portfolio item -->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
                                 <div class="row text-center">
@@ -168,6 +127,48 @@
                             <div class="team-member">
                                 <h4>JustPaintball</h4>
                                 <p class="text-muted">Tienda Online de Paintball</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- Portfolio item -->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
+                                </div>
+                            </a>
+                            <div class="team-member">
+                                <h4>Paintball Madrid</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- Portfolio item -->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                                <div class="row text-center">
+                                   <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." /> 
+                                </div>
+                            </a>
+                            <div class="team-member">
+                                <h4>Action Live</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <!-- Portfolio item -->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
+                                </div>
+                            </a>
+                            <div class="team-member">
+                                <h4>Evasion Paintball</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
                             </div>
                         </div>
                     </div>
