--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/NoahJoseph.jpg" alt="..." />
                             <h4>Noah Joseph</h4>
                             <p class="text-muted">Compositor Sonido y Música</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
