--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                                 <div class="row text-center">
-                                   <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." /> 
+                                   <img class="img-fluid" src="assets/img/portfolio/noname_logo.png" alt="..." /> 
                                 </div>
                             </a>
                             <div class="team-member">
-                                <h4>Action Live</h4>
+                                <h4>NoName</h4>
                                 <p class="text-muted">Paintball en Madrid</p>
                             </div>
                         </div>
