--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/NoahJoseph.jpg" alt="..." />
                             <h4>Noah Joseph</h4>
-                            <p class="text-muted">Compositor Sonido y Música</p>
+                            <p class="text-muted">Compositor, diseñador de interfaces y programador</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://x.com/sirenejota" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sirenejota?igsh=MWh4MTQ3emZ3MDJ2cQ==" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                         </div>
@@ -239,7 +239,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/JaimeLleras_c.jpg" alt="..." />
                             <h4>Jaime Lleras</h4>
-                            <p class="text-muted">Artista 2D</p>
+                            <p class="text-muted">Artista 2D y concept artist</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://x.com/_cheis_?t=HYgYkj-4Ccyw8A3napnPqQ&s=09" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/lleras_sketches/profilecard/?igsh=MXFxMTl1dHhpd2JpMg==" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jaime-lleras-3465b4260/" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
@@ -249,7 +249,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Fernando.jpg" alt="..." />
                             <h4>Fernando Sánchez</h4>
-                            <p class="text-muted">Artista 3D</p>
+                            <p class="text-muted">Diseño 3D de entornos y programación de mecanicas</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
@@ -270,7 +270,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/David.jpg" alt="..." />
                             <h4>David Garde</h4>
-                            <p class="text-muted">Artista 3D</p>
+                            <p class="text-muted">Artista 3D y animador 3D</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ddaved__?igsh=MXRrNjE4NXFic2xveA==" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-instagram"></i></a>
                         </div>
