--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/JaimeLleras_c.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/JaimeLleras.png" alt="..." />
                             <h4>Jaime Lleras</h4>
                             <p class="text-muted">Artista 2D y concept artist</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://x.com/_cheis_?t=HYgYkj-4Ccyw8A3napnPqQ&s=09" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
@@ -249,7 +249,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Fernando.jpg" alt="..." />
                             <h4>Fernando Sánchez</h4>
-                            <p class="text-muted">Diseño 3D de entornos y programación de mecanicas</p>
+                            <p class="text-muted">Diseño 3D de entornos y programación de mecánicas</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
