--- a/index.html
+++ b/index.html
@@ -318,6 +318,14 @@
                     <h2 class="section-heading text-uppercase">Contacta con nosotros</h2>
                     <h3 class="section-subheading text-muted">Para cualquier duda o sugerencia, ¡somos todo oídos!.</h3>
                 </div>
+
+                <div class="row align-items-stretch mb-5">
+                        <div class="col-md-6">
+                            ¡Escribidnos en nuestro servidor oficial de discord a continuación!
+
+                            <a href="https://discord.gg/bZ8gdfcEz4" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Únete y habla con nosotros</a>
+                        </div>
+                </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
                 <!-- * * * * * * * * * * * * * * *-->
