--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contacta con nosotros</h2>
-                    <h3 class="section-subheading text-muted">Para cualquier duda o sugerencia, ¡somos todo oídos!.</h3>
+                    <h3 class="section-subheading text-muted">Puedes escribirnos en nuestro servidor oficial:</h3>
+                    <a href="https://discord.gg/bZ8gdfcEz4" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Únete y habla con nosotros</a>
                 </div>
 
                 <div class="row align-items-stretch mb-5">
                         <div class="row align-items-center">
-                            <h3 class="section-subheading text-muted">¡Escribidnos en nuestro servidor oficial de discord a continuación!</h3>
-                            <a href="https://discord.gg/bZ8gdfcEz4" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Únete y habla con nosotros</a>
+                            <h2 class="section-heading text-uppercase">O utiliza nuestro formulario a continuación</h2>
                         </div>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
