--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                     <br />
                 </div>
 
-                <div class="row align-items-stretch mb-5">
-                        <div class="row align-items-center">
+                <div class="container">
+                        <div class="text-center">
                             <h2 class="section-heading text-uppercase">O utiliza nuestro formulario a continuación</h2>
                         </div>
                 </div>
